k8s/archived/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-demo-nodeport
  namespace: kubedb-monitor-test
  labels:
    app: monitor-demo-app
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32080
    protocol: TCP
    name: http
  selector:
    app: monitor-demo-app
